deploy/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webhook-perf-test
  labels:
    webhook-perf-test: "true"
